--- a/style.css
+++ b/style.css
@@ -8,6 +8,11 @@ body {
    font-family: "Nunito", "sans-serif";
 }
 
+button {
+   cursor: pointer;
+   outline: none;
+}
+
 /* Nav bar */
 .nav {
    display: flex;
@@ -16,6 +21,9 @@ body {
    width: 100%;
    height: 60px;
    box-shadow: rgba(0, 0, 0, 0.06) -3px 4px 4px 0px;
+   position: fixed;
+   z-index: 1;
+   background: #fff;
 }
 
 .nav h1 {
@@ -33,11 +41,7 @@ body {
    display: inline-block;
    margin-right: 40px;
    font-size: 17px;
-   font-weight: 600;
-}
-
-.nav-pricing {
-   margin-right: 28px;
+   font-weight: normal;
 }
 
 .nav a {
@@ -45,12 +49,81 @@ body {
    color: #000;
 }
 
-.contact-back {
-   width: 130px;
-   height: 60px;
+/* Landing Page */
+.landing-p {
+   display: flex;
+   width: 100%;
+   height: 100vh;
+}
+
+.lp-left-slope {
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   width: 22.5%;
+   height: 100vh;
+   background: #3E4656;
+   padding-left: 40px;
+}
+
+.lp-content {
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   width: 77.5%;
+   height: 100vh;
+   padding-left: 85px;
+}
+
+.lp-left-title1 {
+   color: #FFE8D6;
+   font-size: 30px;
+   font-weight: 400;
+   margin-top: 50px;
+   letter-spacing: 3px;
+}
+
+.lp-seperator {
+   width: 85px;
+   height: 2px;
+   background: #fff;
+   border-radius: 15px;
+   margin-top: 25px;
+}
+
+.lp-left-title2 {
+   color: #FFE8D6;
+   font-size: 35px;
+   font-weight: 600;
+   margin-top: 25px;
+   letter-spacing: 3px;
+}
+
+.lp-content h4 {
+   font-size: 14px;
+   font-weight: 200;
+   filter: opacity(50%);
+}
+
+.lp-content h1 {
+   font-size: 50px;
+   font-weight: 600;
+   margin-top: 1%;
+}
+
+.lp-content p {
+   font-size: 17px;
+   font-weight: 200;
+   margin-top: 1.8%;
+   line-height: 33px;
+}
+
+.lp-button {
+   width: 200px;
+   height: 50px;
    background: #FFE8D6;
-   position: absolute;
-   top: 0;
-   right: 0;
-   z-index: -1;
+   border: 1px #FFE8D6 solid;
+   font-size: 17px;
+   font-weight: 100;
+   margin-top: 3.4%;
 }
