--- a/style.css
+++ b/style.css
@@ -127,3 +127,49 @@ button {
    font-weight: 100;
    margin-top: 3.4%;
 }
+
+/* What We Offer */
+.wwo {
+   display: flex;
+   width: 100%;
+   height: 400px;
+}
+
+.wwo-slope {
+   display: flex;
+   width: 22.5%;
+   height: 400px;
+   background: #2B3038;
+   align-items: center;
+   padding-left: 40px;
+}
+
+.wwo-content {
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   height: 400px;
+   width: 77.5%;
+   background: #FFE8D6;
+   padding-left: 4.3%;
+}
+
+.wwo h1 {
+   color: #fff;
+   line-height: 100px;
+   font-size: 40px;
+   font-weight: lighter;
+}
+
+.wwo-text1 {
+   font-size: 20px;
+   font-weight: 300;
+   line-height: 37px;
+}
+
+.wwo-text2 {
+   font-size: 20px;
+   font-weight: 300;
+   line-height: 37px;
+   margin-top: 37px;
+}
