--- a/style.css
+++ b/style.css
@@ -141,7 +141,7 @@ button {
    height: 400px;
    background: #2B3038;
    align-items: center;
-   padding-left: 40px;
+   padding-left: 3%;
 }
 
 .wwo-content {
@@ -172,4 +172,57 @@ button {
    font-weight: 300;
    line-height: 37px;
    margin-top: 37px;
+}
+
+/* Why us */
+.whyus {
+   display: grid;
+   grid-template-columns: 53% 47%;
+   grid-template-rows: 1fr;
+   width: 100%;
+   height: 630px;
+}
+
+.whyus-content {
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   width: 100%;
+   height: 100%;
+   padding-left: 10.5%;
+}
+
+.whyus-content h1 {
+   font-size: 45px;
+   font-weight: 600;
+}
+
+.whyus-seperator {
+   width: 80px;
+   height: 4px;
+   border-radius: 15px;
+   background: #FFE8D6;
+   margin-top: 4.7%;
+}
+
+.whyus-content p {
+   font-size: 17px;
+   font-weight: 200;
+   line-height: 38px;
+   margin-top: 5%;
+}
+
+.whyus-button {
+   width: 200px;
+   height: 52px;
+   background: #3E4656;
+   border: 1px #3E4656 solid;
+   font-size: 16.4px;
+   font-weight: lighter;
+   color: #fff;
+   margin-top: 5.8%;
+}
+
+.whyus-img {
+   margin-top: 9.4%;
 }
