--- a/style.css
+++ b/style.css
@@ -226,3 +226,53 @@ button {
 .whyus-img {
    margin-top: 9.4%;
 }
+
+/* Healthy life style */
+.healthy {
+   display: grid;
+   grid-template-columns: 20% 80%;
+   grid-template-rows: 1fr;
+   width: 100%;
+   height: 450px;
+}
+
+.healty-slope {
+   display: flex;
+   align-items: center;
+   width: 100%;
+   height: 100%;
+   background: #2B3038;
+   padding-left: 15%;
+}
+
+.healthy-content {
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   width: 100%;
+   height: 100%;
+   background: url(./Images/Png/healthy-img\ \(1\).png);
+   padding-left: 6.3%;
+}
+
+.healty-slope h1 {
+   color: #FFE8D6;
+   font-size: 38px;
+   font-weight: 100;
+   line-height: 235%;
+}
+
+.healthy-text1 {
+   color: #fff;
+   font-size: 18.5px;
+   font-weight: 100;
+   line-height: 38.5px;
+}
+
+.healthy-text2 {
+   color: #fff;
+   font-size: 18.5px;
+   font-weight: 100;
+   line-height: 38.5px;
+   margin-top: 2%;
+}
