--- a/style.css
+++ b/style.css
@@ -336,7 +336,7 @@ button {
    justify-content: space-evenly;
    width: 100%;
    height: 595px;
-   margin-top: 24%;
+   margin-top: 23.4%;
 }
 
 .pricing-slope {
@@ -406,4 +406,68 @@ button {
    font-size: 17px;
    font-weight: 100;
    margin-top: 6%;
+}
+
+/* Testimonials */
+.test {
+   display: flex;
+   width: 100%;
+   height: 425px;
+   margin-top: 12%;
+}
+
+.test-content {
+   display: flex;
+   flex-direction: column;
+   width: 865px;
+   height: 425px;
+   background: #FFE8D6;
+   margin-left: 15%;
+   padding-left: 5%;
+}
+
+.test-right {
+   height: 425px;
+   width: 141px;
+   background: #3E4656;
+}
+
+.test-content h1 {
+   font-size: 52px;
+   font-weight: 600;
+   position: absolute;
+   left: 6%;
+   margin-top: 4.5%;
+}
+
+.test-seperator {
+   width: 70px;
+   height: 4px;
+   border-radius: 15px;
+   background: #3E4656;
+   margin-top: 17.2%;
+}
+
+.test-content p {
+   font-size: 19px;
+   font-weight: 200;
+   margin-top: 4%;
+}
+
+.test-content h2 {
+   font-size: 19px;
+   font-weight: 600;
+   margin-top: 3%;
+}
+
+.test-button {
+   width: 200px;
+   height: 60px;
+   background: #3E4656;
+   border: 1px #3E4656 solid;
+   font-size: 18px;
+   font-weight: 100;
+   color: #fff;
+   margin-top: 31.3%;
+   position: absolute;
 }
