--- a/style.css
+++ b/style.css
@@ -739,11 +739,53 @@ button {
    width: 100%;
    height: 448px;
    justify-content: center;
+   margin-top: 14%;
 }
 
 .pip-rect {
    display: flex;
+   flex-direction: column;
    width: 1035px;
    height: 448px;
    background: #EEEDED;
+}
+
+.pip-rect h1 {
+   font-size: 82px;
+   font-weight: bolder;
+   margin-left: 9%;
+   position: absolute;
+   top: 126.3%;
+   font-family: "Open Sans", "sans-serif";
+}
+
+.pip-seperator {
+   width: 225px;
+   height: 3px;
+   border-radius: 15px;
+   background: #2B3038;
+   margin-top: 7.5%;
+   margin-left: 3.5%;
+}
+
+.pip-text1 {
+   margin-left: 11.5%;
+   margin-top: 3.4%;
+   font-size: 20px;
+   font-weight: 400;
+   letter-spacing: 1.3px;
+}
+
+.pip-text2 {
+   margin-left: 11.5%;
+   margin-top: 2.3%;
+   font-size: 20px;
+   font-weight: 400;
+   letter-spacing: 1.3px;
+}
+
+.pip-img {
+   position: absolute;
+   left: 60%;
+   margin-top: 12%;
 }
