--- a/style.css
+++ b/style.css
@@ -789,3 +789,57 @@ button {
    left: 60%;
    margin-top: 12%;
 }
+
+/* Staff */
+.staff {
+   display: flex;
+   justify-content: space-evenly;
+   width: 100%;
+   height: 522px;
+   margin-top: 18.5%;
+}
+
+.staff-slope {
+   display: grid;
+   grid-template-columns: 1fr;
+   grid-template-rows: 76% 24%;
+   width: 350px;
+   height: 522px;
+}
+
+.staff-1 {
+   width: 100%;
+   height: 100%;
+}
+
+.staff-2 {
+   width: 100%;
+   height: 100%;
+}
+
+.staff-3 {
+   width: 100%;
+   height: 100%;
+}
+
+.staff-info {
+   display: flex;
+   flex-direction: column;
+   width: 100%;
+   height: 100%;
+   justify-content: center;
+   align-items: center;
+   background: #2B3038;
+}
+
+.staff-info h1 {
+   color: #fff;
+   font-size: 30px;
+   font-weight: 400;
+}
+
+.staff-info h2 {
+   color: #FFE8D6;
+   font-size: 18px;
+   font-weight: 400;
+}
