--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-   font-family: "Nunito", "sans-serif";
+   font-family: 'Nunito', sans-serif;
    line-height: 40px;
 }
 
@@ -840,6 +840,80 @@ button {
 
 .staff-info h2 {
    color: #FFE8D6;
+   font-size: 18px;
+   font-weight: 400;
+}
+
+/* Access */
+.access {
+   display: flex;
+   width: 100%;
+   height: 575px;
+   margin-top: 12%;
+}
+
+.access-content {
+   display: flex;
+   flex-direction: column;
+   width: 225px;
+   height: 330px;
+   position: absolute;
+   margin-left: 11%;
+   margin-top: 13%;
+}
+
+.access-img {
+   width: 675px;
+   height: 425px;
+   position: absolute;
+   margin-top: 8.5%;
+   margin-left: 40.5%;
+}
+
+.access-rect {
+   width: 755px;
+   height: 475px;
+   background: #FFE8D6;
+   margin-left: 28%;
+}
+
+.access-title {
+   font-size: 80px;
+   font-family: 'Open Sans', sans-serif;
+   position: absolute;
+   margin-left: 11%;
+   margin-top: 5%;
+   letter-spacing: 4px;
+}
+
+.access-address h2 {
+   font-size: 25px;
+   font-weight: 600;
+}
+
+.access-address p {
+   font-size: 18px;
+   font-weight: 400;
+}
+
+.access-open h2 {
+   font-size: 25px;
+   font-weight: 600;
+   margin-top: 7.5%;
+}
+
+.access-open p {
+   font-size: 18px;
+   font-weight: 400;
+}
+
+.access-tel h2 {
+   font-size: 25px;
+   font-weight: 600;
+   margin-top: 7.5%;
+}
+
+.access-tel p {
    font-size: 18px;
    font-weight: 400;
 }
