--- a/style.css
+++ b/style.css
@@ -53,6 +53,10 @@ button {
    color: #000;
 }
 
+.burger {
+   display: none;
+}
+
 /* Landing Page */
 .landing-p {
    display: flex;
@@ -230,7 +234,7 @@ button {
    height: 4px;
    border-radius: 15px;
    background: #FFE8D6;
-   margin-top: 4.7%;
+   margin-top: 6.5%;
 }
 
 .whyus-content p {
@@ -817,6 +821,7 @@ button {
 .staff-2 {
    width: 100%;
    height: 100%;
+   object-fit: cover;
 }
 
 .staff-3 {
@@ -928,4 +933,673 @@ button {
    width: 100%;
    height: 527px;
    margin-top: 10%;
+}
+
+/* HOME MOBILE VIEW */
+@media screen and (max-width: 376px) {
+   * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+   }
+   
+   body {
+      font-family: 'Nunito', sans-serif;
+      line-height: 33px;
+   }
+   
+   button {
+      cursor: pointer;
+      outline: none;
+      letter-spacing: 1px;
+   }
+   
+   /* Nav bar */
+   .nav {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      width: 100%;
+      height: 60px;
+      box-shadow: rgba(0, 0, 0, 0.06) -3px 4px 4px 0px;
+      position: fixed;
+      z-index: 1;
+      background: #fff;
+   }
+   
+   .nav h1 {
+      position: absolute;
+      left: 8.5%;
+      font-size: 28px;
+      font-weight: 600;
+   }
+   
+   .logo {
+      margin-left: 75%;
+      margin-top: 40%;
+      width: 30px;
+      height: 37px;
+   }
+
+   .burger {
+      display: block;
+      position: relative;
+      margin-right: 3%;
+   }
+
+   .burger-line {
+      width: 25px;
+      height: 4px;
+      background: #1b1a1a;
+      border-radius: 15px;
+   }
+   
+   .burger-line::before,
+   .burger-line::after {
+      content: "";
+      position: absolute;
+      width: 32px;
+      height: 4px;
+      background: #1b1a1a;
+      border-radius: 15px;
+   }
+
+   .burger-line::before {
+      transform: translateY(-11px);
+   }
+
+   .burger-line::after {
+      transform: translateY(11px);
+   }
+   
+   .nav ul {
+      display: none;
+   }
+   
+   /* Landing Page */
+   .landing-p {
+      display: flex;
+      width: 100%;
+      height: 100vh;
+   }
+   
+   .lp-left-slope {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      width: 22.5%;
+      height: 100vh;
+      background: #3E4656;
+      padding-left: 40px;
+   }
+   
+   .lp-content {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      width: 77.5%;
+      height: 100vh;
+      padding-left: 85px;
+   }
+   
+   .lp-left-title1 {
+      color: #FFE8D6;
+      font-size: 30px;
+      font-weight: 400;
+      margin-top: 50px;
+      letter-spacing: 3px;
+   }
+   
+   .lp-seperator {
+      width: 85px;
+      height: 2px;
+      background: #fff;
+      border-radius: 15px;
+      margin-top: 25px;
+   }
+   
+   .lp-left-title2 {
+      color: #FFE8D6;
+      font-size: 35px;
+      font-weight: 600;
+      margin-top: 25px;
+      letter-spacing: 3px;
+   }
+   
+   .lp-content h4 {
+      font-size: 14px;
+      font-weight: 200;
+      filter: opacity(50%);
+   }
+   
+   .lp-content h1 {
+      font-size: 50px;
+      font-weight: 600;
+      margin-top: 1%;
+   }
+   
+   .lp-content p {
+      font-size: 17px;
+      font-weight: 200;
+      margin-top: 3.7%;
+      line-height: 33px;
+   }
+   
+   .lp-button {
+      width: 200px;
+      height: 50px;
+      background: #FFE8D6;
+      border: 1px #FFE8D6 solid;
+      font-size: 17px;
+      font-weight: 100;
+      margin-top: 3.4%;
+   }
+   
+   .socials {
+      display: flex;
+      justify-content: space-evenly;
+      width: 115px;
+      margin-left: 61.3%;
+      margin-top: 41.5%;
+      position: absolute;
+   }
+   
+   .fb {
+      width: 13px;
+      cursor: pointer;
+   }
+   
+   .ig {
+      width: 19px;
+      cursor: pointer;
+   }
+   
+   .twitter {
+      width: 21px;
+      cursor: pointer;
+   }
+   
+   /* What We Offer */
+   .wwo {
+      display: flex;
+      width: 100%;
+      height: 400px;
+   }
+   
+   .wwo-slope {
+      display: flex;
+      width: 22.5%;
+      height: 400px;
+      background: #2B3038;
+      align-items: center;
+      padding-left: 3%;
+   }
+   
+   .wwo-content {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      height: 400px;
+      width: 77.5%;
+      background: #FFE8D6;
+      padding-left: 4.3%;
+   }
+   
+   .wwo h1 {
+      color: #fff;
+      line-height: 100px;
+      font-size: 40px;
+      font-weight: lighter;
+   }
+   
+   .wwo-text1 {
+      font-size: 20px;
+      font-weight: 300;
+      line-height: 37px;
+   }
+   
+   .wwo-text2 {
+      font-size: 20px;
+      font-weight: 300;
+      line-height: 37px;
+      margin-top: 37px;
+   }
+   
+   /* Why us */
+   .whyus {
+      display: grid;
+      grid-template-columns: 53% 47%;
+      grid-template-rows: 1fr;
+      width: 100%;
+      height: 630px;
+   }
+   
+   .whyus-content {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      width: 100%;
+      height: 100%;
+      padding-left: 10.5%;
+   }
+   
+   .whyus-content h1 {
+      font-size: 45px;
+      font-weight: 600;
+   }
+   
+   .whyus-seperator {
+      width: 80px;
+      height: 4px;
+      border-radius: 15px;
+      background: #FFE8D6;
+      margin-top: 6.5%;
+   }
+   
+   .whyus-content p {
+      font-size: 17px;
+      font-weight: 200;
+      line-height: 38px;
+      margin-top: 5%;
+   }
+   
+   .whyus-button {
+      width: 200px;
+      height: 52px;
+      background: #3E4656;
+      border: 1px #3E4656 solid;
+      font-size: 16.4px;
+      font-weight: lighter;
+      color: #fff;
+      margin-top: 5.8%;
+   }
+   
+   .whyus-img {
+      margin-top: 9.4%;
+   }
+   
+   /* Healthy life style */
+   .healthy {
+      display: grid;
+      grid-template-columns: 20% 80%;
+      grid-template-rows: 1fr;
+      width: 100%;
+      height: 450px;
+   }
+   
+   .healty-slope {
+      display: flex;
+      align-items: center;
+      width: 100%;
+      height: 100%;
+      background: #2B3038;
+      padding-left: 15%;
+   }
+   
+   .healthy-content {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      width: 100%;
+      height: 100%;
+      background: url(./Images/Png/healthy-img\ \(1\).png);
+      padding-left: 6.3%;
+   }
+   
+   .healty-slope h1 {
+      color: #FFE8D6;
+      font-size: 38px;
+      font-weight: 100;
+      line-height: 235%;
+   }
+   
+   .healthy-text1 {
+      color: #fff;
+      font-size: 18.5px;
+      font-weight: 100;
+      line-height: 38.5px;
+   }
+   
+   .healthy-text2 {
+      color: #fff;
+      font-size: 18.5px;
+      font-weight: 100;
+      line-height: 38.5px;
+      margin-top: 2%;
+   }
+   
+   /* Hire a trainer */
+   .trainer {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      width: 830px;
+      height: 500px;
+      background: #FFE8D6;
+      margin-top: 10%;
+      padding-left: 3.8%;
+   }
+   
+   .trainer h1 {
+      font-size: 44px;
+      letter-spacing: 2px;
+   }
+   
+   .trainer-seperator {
+      width: 80px;
+      height: 4px;
+      background: #3E4656;
+      border-radius: 15px;
+      margin-top: 4.5%;
+   }
+   
+   .trainer p {
+      font-size: 18px;
+      font-weight: lighter;
+      line-height: 40px;
+      margin-top: 4.2%;
+   }
+   
+   .trainer-button {
+      width: 200px;
+      height: 55px;
+      background: #3E4656;
+      border: 1px #3E4656 solid;
+      color: #fff;
+      font-size: 18px;
+      font-weight: 100;
+      margin-top: 4.2%;
+   }
+   
+   .trainer-img {
+      position: absolute;
+      height: 525px;
+      right: 0%;
+      margin-top: 12%;
+   }
+   
+   /* Pricing */
+   .pricing {
+      display: flex;
+      justify-content: space-evenly;
+      width: 100%;
+      height: 595px;
+      margin-top: 23.4%;
+   }
+   
+   .pricing-slope {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 385px;
+      height: 100%;
+      border-radius: 20px;
+      box-shadow: 
+         -12px -12px 12px 0 rgb(243, 243, 243),
+         12px 12px 12px 0 rgba(0, 0, 0, 0.03);
+   }
+   
+   .pricing-type {
+      font-size: 32px;
+      font-weight: 100;
+      margin-top: 8.5%;
+   }
+   
+   .pricing-seperator1 {
+      width: 70px;
+      height: 4px;
+      border-radius: 15px;
+      background: #FFE8D6;
+      margin-top: 4.5%;
+   }
+   
+   .pricing-price {
+      font-size: 48px;
+      font-weight: bolder;
+      margin-top: 6.8%;
+   }
+   
+   .price-month {
+      font-size: 20px;
+      font-weight: 100;
+   }
+   
+   .pricing-seperator2 {
+      width: 300px;
+      height: 4px;
+      border-radius: 15px;
+      background: #3E4656;
+      margin-top: 4.6%;
+      margin-bottom: 4%;
+   }
+   
+   .pricing-slope p {
+      font-size: 19px;
+      font-weight: 400;
+      line-height: 53px;
+   }
+   
+   .locked-perk {
+      font-size: 19px;
+      font-weight: 200;
+      line-height: 53px;
+      filter: opacity(16%);
+   }
+   
+   .pricing-button {
+      width: 220px;
+      height: 52px;
+      border: 1px #FFE8D6 solid;
+      background: #FFE8D6;
+      font-size: 17px;
+      font-weight: 100;
+      margin-top: 6%;
+   }
+   
+   /* Testimonials */
+   .test {
+      display: flex;
+      width: 100%;
+      height: 425px;
+      margin-top: 12%;
+   }
+   
+   .test-content {
+      display: flex;
+      flex-direction: column;
+      width: 865px;
+      height: 425px;
+      background: #FFE8D6;
+      margin-left: 15%;
+      padding-left: 5%;
+   }
+   
+   .test-right {
+      height: 425px;
+      width: 141px;
+      background: #3E4656;
+   }
+   
+   .test-content h1 {
+      font-size: 52px;
+      font-weight: 600;
+      position: absolute;
+      left: 6%;
+      margin-top: 4.5%;
+   }
+   
+   .test-seperator {
+      width: 70px;
+      height: 4px;
+      border-radius: 15px;
+      background: #3E4656;
+      margin-top: 17.2%;
+   }
+   
+   .test-content p {
+      font-size: 19px;
+      font-weight: 200;
+      margin-top: 4%;
+   }
+   
+   .test-content h2 {
+      font-size: 19px;
+      font-weight: 600;
+      margin-top: 3%;
+   }
+   
+   .test-button {
+      width: 200px;
+      height: 60px;
+      background: #3E4656;
+      border: 1px #3E4656 solid;
+      font-size: 18px;
+      font-weight: 100;
+      color: #fff;
+      margin-top: 31.3%;
+      position: absolute;
+   }
+   
+   /* Contact */
+   .contact {
+      display: grid;
+      grid-template-columns: 37% 63%;
+      grid-template-rows: 1fr;
+      width: 100%;
+      height: 527px;
+      margin-top: 15%;
+   }
+   
+   .contact-info {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+      height: 100%;
+      background: #3E4656;
+   }
+   
+   .c-address {
+      font-size: 21px;
+      font-weight: 300;
+      color: #fff;
+      margin-top: 8%;
+   }
+   
+   .c-phone {
+      font-size: 21px;
+      font-weight: 300;
+      color: #fff;
+      margin-top: 4%;
+   }
+   
+   .c-email {
+      font-size: 21px;
+      font-weight: 300;
+      color: #fff;
+      margin-top: 4%;
+   }
+   
+   .c-time {
+      font-size: 21px;
+      font-weight: 300;
+      color: #fff;
+      margin-top: 4%;
+   }
+   
+   .envelope {
+      margin-top: 13%;
+   }
+   
+   /* Contact input */
+   .contact-input {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+      height: 100%;
+      background: #EEF3FA;
+   }
+   
+   .contact-input h1 {
+      font-size: 45px;
+      font-weight: 600;
+      margin-top: 6%;
+   }
+   
+   .i-name {
+      width: 600px;
+      height: 45px;
+      font-size: 13px;
+      font-weight: 400;
+      border: none;
+      padding-left: 3%;
+      outline: none;
+      margin-top: 4.5%;
+      padding-right: 2.5%;
+   }
+   
+   .i-name::placeholder {
+      color: #000;
+   }
+   
+   .i-email {
+      width: 600px;
+      height: 45px;
+      font-size: 13px;
+      font-weight: 400;
+      border: none;
+      padding-left: 3%;
+      outline: none;
+      margin-top: 3.5%;
+      padding-right: 2.5%;
+   }
+   
+   .i-email::placeholder {
+      color: #000;
+   }
+   
+   .i-msg {
+      width: 600px;
+      height: 120px;
+      font-size: 14.3px;
+      font-weight: 400;
+      border: none;
+      padding-left: 3%;
+      outline: none;
+      margin-top: 3.5%;
+      resize: none;
+      font-family: "Nunito";
+      padding-top: 1.2%;
+      padding-right: 2.5%;
+   }
+   
+   .i-msg::placeholder {
+      color: #000;
+   }
+   
+   .i-button {
+      width: 250px;
+      height: 50px;
+      background: #2B3038;
+      border: 1px #2B3038 solid;
+      color: #fff;
+      font-size: 18px;
+      font-weight: 100;
+      margin-top: 4.5%;
+   }
+   
+   /* Footer */
+   .footer {
+      display: flex;
+      justify-content: space-evenly;
+      align-items: center;
+      width: 100%;
+      height: 125px;
+   }
+   
+   .footer h1 {
+      font-size: 25px;
+      font-weight: 600;
+   }
 }
