--- a/style.css
+++ b/style.css
@@ -307,11 +307,15 @@ button {
    padding-left: 6.3%;
 }
 
-.healty-slope h1 {
+.healthy-title-d {
    color: #FFE8D6;
    font-size: 38px;
    font-weight: 100;
    line-height: 235%;
+}
+
+.healthy-title-m {
+   display: none;
 }
 
 .healthy-text1 {
@@ -327,6 +331,10 @@ button {
    font-weight: 100;
    line-height: 38.5px;
    margin-top: 2%;
+}
+
+.healthy-text1-m, .healthy-text2-m {
+   display: none;
 }
 
 /* Hire a trainer */
@@ -1235,20 +1243,21 @@ button {
    /* Healthy life style */
    .healthy {
       display: grid;
-      grid-template-columns: 20% 80%;
-      grid-template-rows: 1fr;
+      grid-template-columns: 1fr;
+      grid-template-rows: 20% 80%;
       width: 100%;
-      height: 450px;
+      height: 565px;
       margin-top: 100%;
    }
    
    .healty-slope {
       display: flex;
       align-items: center;
+      justify-content: center;
       width: 100%;
       height: 100%;
       background: #2B3038;
-      padding-left: 15%;
+      padding-left: 0%;
    }
    
    .healthy-content {
@@ -1261,26 +1270,37 @@ button {
       padding-left: 6.3%;
    }
    
-   .healty-slope h1 {
+   .healthy-title-d {
+      display: none;
+   }
+   
+   .healthy-title-m {
+      display: block;
       color: #FFE8D6;
-      font-size: 38px;
+      font-size: 28px;
       font-weight: 100;
       line-height: 235%;
    }
    
-   .healthy-text1 {
+   .healthy-text1-m {
+      display: block;
       color: #fff;
-      font-size: 18.5px;
+      font-size: 13px;
       font-weight: 100;
-      line-height: 38.5px;
+      line-height: 33px;
    }
    
-   .healthy-text2 {
+   .healthy-text2-m {
+      display: block;
       color: #fff;
-      font-size: 18.5px;
+      font-size: 13px;
       font-weight: 100;
-      line-height: 38.5px;
+      line-height: 33px;
       margin-top: 2%;
+   }
+
+   .healthy-text1, .healthy-text2 {
+      display: none;
    }
    
    /* Hire a trainer */
