--- a/style.css
+++ b/style.css
@@ -509,10 +509,14 @@ button {
    margin-top: 17.2%;
 }
 
-.test-content p {
+.test-text-d {
    font-size: 19px;
    font-weight: 200;
    margin-top: 4%;
+}
+
+.test-text-m {
+   display: none;
 }
 
 .test-content h2 {
@@ -1463,57 +1467,65 @@ button {
    .test-content {
       display: flex;
       flex-direction: column;
+      align-items: center;
       width: 865px;
-      height: 425px;
+      height: 385px;
       background: #FFE8D6;
-      margin-left: 15%;
-      padding-left: 5%;
+      margin-left: 0%;
+      padding-left: 4%;
+      padding-right: 4%;
+      text-align: center;
    }
    
    .test-right {
-      height: 425px;
-      width: 141px;
-      background: #3E4656;
+      display: none;
    }
    
    .test-content h1 {
-      font-size: 52px;
+      font-size: 40px;
       font-weight: 600;
       position: absolute;
-      left: 6%;
-      margin-top: 4.5%;
+      left: 13%;
+      margin-top: 0%;
+      top: 819%;
    }
    
    .test-seperator {
-      width: 70px;
+      width: 65px;
       height: 4px;
       border-radius: 15px;
       background: #3E4656;
-      margin-top: 17.2%;
+      margin-top: 17%;
    }
    
-   .test-content p {
-      font-size: 19px;
+   .test-text-m {
+      display: block;
+      font-size: 13px;
       font-weight: 200;
-      margin-top: 4%;
+      margin-top: 9%;
+      line-height: 33px;
+   }
+
+   .test-text-d {
+      display: none;
    }
    
    .test-content h2 {
       font-size: 19px;
       font-weight: 600;
-      margin-top: 3%;
+      margin-top: 0%;
    }
    
    .test-button {
-      width: 200px;
-      height: 60px;
+      width: 175px;
+      height: 48px;
       background: #3E4656;
       border: 1px #3E4656 solid;
-      font-size: 18px;
+      font-size: 16px;
       font-weight: 100;
       color: #fff;
-      margin-top: 31.3%;
-      position: absolute;
+      margin-top: 10%;
+      position: static;
    }
    
    /* Contact */
