--- a/style.css
+++ b/style.css
@@ -605,7 +605,7 @@ button {
 }
 
 .i-name {
-   width: 600px;
+   width: 75%;
    height: 45px;
    font-size: 13px;
    font-weight: 400;
@@ -621,7 +621,7 @@ button {
 }
 
 .i-email {
-   width: 600px;
+   width: 75%;
    height: 45px;
    font-size: 13px;
    font-weight: 400;
@@ -637,7 +637,7 @@ button {
 }
 
 .i-msg {
-   width: 600px;
+   width: 75%;
    height: 120px;
    font-size: 14.3px;
    font-weight: 400;
@@ -1005,7 +1005,7 @@ button {
    
    .nav h1 {
       position: absolute;
-      left: 8.5%;
+      left: 18%;
       font-size: 28px;
       font-weight: 600;
    }
@@ -1020,7 +1020,7 @@ button {
    .burger {
       display: block;
       position: relative;
-      margin-right: 3%;
+      margin-right: 6%;
    }
 
    .burger-line {
@@ -1142,9 +1142,10 @@ button {
       display: flex;
       width: 100%;
       height: 100%;
-      background: #3E4656;
+      background: #FFE8D6;
       align-items: center;
       justify-content: center;
+      border-bottom: 6px #3E4656 solid;
    }
    
    .wwo-content {
@@ -1166,7 +1167,7 @@ button {
 
    .wwo-slope-m {
       display: block;
-      color: #fff;
+      color: #000;
       font-size: 33px;
       font-weight: lighter;
    }
@@ -1180,9 +1181,13 @@ button {
       text-align: center;
       font-size: 13px;
       line-height: 33px;
-      margin-top: 5%;
+      margin-top: 0%;
    }
-   
+
+   .wwo-text2-m {
+      margin-top: 8%;
+   }
+
    /* Why us */
    .whyus {
       display: flex;
@@ -1531,10 +1536,10 @@ button {
    /* Contact */
    .contact {
       display: grid;
-      grid-template-columns: 37% 63%;
-      grid-template-rows: 1fr;
+      grid-template-columns: 1fr;
+      grid-template-rows: 50% 50%;
       width: 100%;
-      height: 527px;
+      height: 1055px;
       margin-top: 15%;
    }
    
@@ -1551,28 +1556,28 @@ button {
       font-size: 21px;
       font-weight: 300;
       color: #fff;
-      margin-top: 8%;
+      margin-top: 12%;
    }
    
    .c-phone {
       font-size: 21px;
       font-weight: 300;
       color: #fff;
-      margin-top: 4%;
+      margin-top: 9%;
    }
    
    .c-email {
       font-size: 21px;
       font-weight: 300;
       color: #fff;
-      margin-top: 4%;
+      margin-top: 9%;
    }
    
    .c-time {
       font-size: 21px;
       font-weight: 300;
       color: #fff;
-      margin-top: 4%;
+      margin-top: 9%;
    }
    
    .envelope {
@@ -1590,20 +1595,20 @@ button {
    }
    
    .contact-input h1 {
-      font-size: 45px;
+      font-size: 38px;
       font-weight: 600;
-      margin-top: 6%;
+      margin-top: 13%;
    }
    
    .i-name {
-      width: 600px;
+      width: 80%;
       height: 45px;
       font-size: 13px;
       font-weight: 400;
       border: none;
       padding-left: 3%;
       outline: none;
-      margin-top: 4.5%;
+      margin-top: 12%;
       padding-right: 2.5%;
    }
    
@@ -1612,14 +1617,14 @@ button {
    }
    
    .i-email {
-      width: 600px;
+      width: 80%;
       height: 45px;
       font-size: 13px;
       font-weight: 400;
       border: none;
       padding-left: 3%;
       outline: none;
-      margin-top: 3.5%;
+      margin-top: 7%;
       padding-right: 2.5%;
    }
    
@@ -1628,14 +1633,14 @@ button {
    }
    
    .i-msg {
-      width: 600px;
+      width: 80%;
       height: 120px;
       font-size: 14.3px;
       font-weight: 400;
       border: none;
       padding-left: 3%;
       outline: none;
-      margin-top: 3.5%;
+      margin-top: 7%;
       resize: none;
       font-family: "Nunito";
       padding-top: 1.2%;
@@ -1654,20 +1659,23 @@ button {
       color: #fff;
       font-size: 18px;
       font-weight: 100;
-      margin-top: 4.5%;
+      margin-top: 11.2%;
    }
    
    /* Footer */
    .footer {
       display: flex;
+      flex-direction: column;
       justify-content: space-evenly;
       align-items: center;
       width: 100%;
-      height: 125px;
+      height: 250px;
+      padding-left: 4%;
+      padding-right: 4%;
    }
    
    .footer h1 {
-      font-size: 25px;
+      font-size: 20px;
       font-weight: 600;
    }
 }
