--- a/style.css
+++ b/style.css
@@ -1981,13 +1981,144 @@ button {
       font-weight: 400;
    }
 
-   /* Contact us - About */
+   /* Contact Us */
    .contact-a {
       display: grid;
-      grid-template-columns: 37% 63%;
-      grid-template-rows: 1fr;
+      grid-template-columns: 1fr;
+      grid-template-rows: 50% 50%;
       width: 100%;
-      height: 527px;
-      margin-top: 10%;
+      height: 1055px;
+      margin-top: 45%;
+   }
+   
+   .contact-info {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+      height: 100%;
+      background: #3E4656;
+   }
+   
+   .c-address {
+      font-size: 21px;
+      font-weight: 300;
+      color: #fff;
+      margin-top: 12%;
+   }
+   
+   .c-phone {
+      font-size: 21px;
+      font-weight: 300;
+      color: #fff;
+      margin-top: 9%;
+   }
+   
+   .c-email {
+      font-size: 21px;
+      font-weight: 300;
+      color: #fff;
+      margin-top: 9%;
+   }
+   
+   .c-time {
+      font-size: 21px;
+      font-weight: 300;
+      color: #fff;
+      margin-top: 9%;
+   }
+   
+   .envelope {
+      margin-top: 13%;
+   }
+   
+   /* Contact input */
+   .contact-input {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+      height: 100%;
+      background: #EEF3FA;
+   }
+   
+   .contact-input h1 {
+      font-size: 38px;
+      font-weight: 600;
+      margin-top: 13%;
+   }
+   
+   .i-name {
+      width: 80%;
+      height: 45px;
+      font-size: 13px;
+      font-weight: 400;
+      border: none;
+      padding-left: 3%;
+      outline: none;
+      margin-top: 12%;
+      padding-right: 2.5%;
+   }
+   
+   .i-name::placeholder {
+      color: #000;
+   }
+   
+   .i-email {
+      width: 80%;
+      height: 45px;
+      font-size: 13px;
+      font-weight: 400;
+      border: none;
+      padding-left: 3%;
+      outline: none;
+      margin-top: 7%;
+      padding-right: 2.5%;
+   }
+   
+   .i-email::placeholder {
+      color: #000;
+   }
+   
+   .i-msg {
+      width: 80%;
+      height: 120px;
+      font-size: 14.3px;
+      font-weight: 400;
+      border: none;
+      padding-left: 3%;
+      outline: none;
+      margin-top: 7%;
+      resize: none;
+      font-family: "Nunito";
+      padding-top: 1.2%;
+      padding-right: 2.5%;
+   }
+   
+   .i-msg::placeholder {
+      color: #000;
+   }
+   
+   .i-button {
+      width: 250px;
+      height: 50px;
+      background: #2B3038;
+      border: 1px #2B3038 solid;
+      color: #fff;
+      font-size: 18px;
+      font-weight: 100;
+      margin-top: 11.2%;
+   }
+   
+   /* Footer */
+   .footer {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+      align-items: center;
+      width: 100%;
+      height: 250px;
+      padding-left: 4%;
+      padding-right: 4%;
    }
 }
