--- a/style.css
+++ b/style.css
@@ -1153,7 +1153,6 @@ button {
       background: #FFE8D6;
       align-items: center;
       justify-content: center;
-      border-bottom: 6px #3E4656 solid;
    }
    
    .wwo-content {
@@ -1194,6 +1193,15 @@ button {
 
    .wwo-text2-m {
       margin-top: 8%;
+   }
+
+   .wwo-sep-m {
+      width: 75px;
+      height: 3px;
+      background: #3E4656;
+      position: absolute;
+      margin-top: 26%;
+      margin-left: 40%;
    }
 
    /* Why us */
@@ -1312,6 +1320,7 @@ button {
       font-size: 13px;
       font-weight: 100;
       line-height: 38px;
+      margin-top: 15%;
    }
    
    .healthy-text2-m {
@@ -1839,8 +1848,9 @@ button {
    .pip-img {
       position: absolute;
       left: 0;
+      object-fit: cover;
       margin-top: 102%;
-      width: 324px;
+      width: 100%;
       height: 275px;
    }
 
